adicionando e estilizando o header

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,22 @@
 
 <body>
 
+    <main>
+        <header>
+            <div class="list-icon">
+                <ul>
+                    <li><img src="" alt="" srcset=""></li>
+                    <li><img src="" alt="" srcset=""></li>
+                    <li><img src="" alt="" srcset=""></li>
+                    <li><img src="" alt="" srcset=""></li>
+                    <li><img src="" alt="" srcset=""></li>
+                </ul>
+            </div>
+        </header>
+        <section class="black">preto</section>
+        <section class="white">branco</section>
+    </main>
+
 </body>
 <script src="../js/code.js"></script>
 
