adicionando responsividade no header

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/black.css">
 </head>
 
 <body>
@@ -14,17 +15,24 @@
     <main>
         <header>
             <div class="list-icon">
-                <ul>
-                    <li><img src="" alt="" srcset=""></li>
-                    <li><img src="" alt="" srcset=""></li>
-                    <li><img src="" alt="" srcset=""></li>
-                    <li><img src="" alt="" srcset=""></li>
-                    <li><img src="" alt="" srcset=""></li>
-                </ul>
+                <div class="scroll">
+                    <p>Felipe Oliveira</p>
+                    <div class="nav">
+                        <img src="../images/icon-hamburger.svg" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="info">
+                    <ul>
+                        <li>Home</li>
+                        <li>Sobre mim</li>
+                        <li>Inscrição</li>
+                        <li>Contato</li>
+                    </ul>
+                </div>
             </div>
         </header>
-        <section class="black">preto</section>
-        <section class="white">branco</section>
+
+
     </main>
 
 </body>
