estilizando a main content

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
                 <div class="scroll">
                     <p>Felipe Oliveira</p>
                     <div class="nav">
-                        <img src="../images/icon-hamburger.svg" alt="" srcset="">
+                        <img src="../images/icon-hamburger.svg" alt="" srcset="" class="menu">
                     </div>
                 </div>
                 <div class="info">
@@ -31,11 +31,30 @@
                 </div>
             </div>
         </header>
+        <section class="main-info">
+            <div class="black"></div>
+            <div class="profile">
+                <div class="img-profile">
+                    <img src="../images/profile.jpg" alt="" srcset="">
+                </div>
+                <div class="icon-profile">
+                    <ul>
+                        <li><img src="../images/github (4).png" alt="" srcset=""></li>
+                        <li><img src="../images/linkedin (1).png" alt="" srcset=""></li>
+                        <li><img src="../images/instagram (2).png" alt="" srcset=""></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="nav-profile">
+                <p>Felipe de Oliveira</p>
+                <p>Desenvolvedor Front End</p>
+            </div>
+        </section>
 
 
     </main>
 
 </body>
-<script src="../js/code.js"></script>
+<script src="../js/menu.js"></script>
 
 </html>
