finalizando a section main

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/black.css">
+    <link rel="stylesheet" href="../css/personalizaButton.css">
 </head>
 
 <body>
@@ -36,18 +37,23 @@
             <div class="profile">
                 <div class="img-profile">
                     <img src="../images/profile.jpg" alt="" srcset="">
+                    <div class="icon-profile">
+                        <ul>
+                            <li><img src="../images/github (4).png" alt="" srcset=""></li>
+                            <li><img src="../images/linkedin (1).png" alt="" srcset=""></li>
+
+                        </ul>
+                    </div>
                 </div>
-                <div class="icon-profile">
-                    <ul>
-                        <li><img src="../images/github (4).png" alt="" srcset=""></li>
-                        <li><img src="../images/linkedin (1).png" alt="" srcset=""></li>
-                        <li><img src="../images/instagram (2).png" alt="" srcset=""></li>
-                    </ul>
+                <div class="barrinha"></div>
+                <div class="nav-profile">
+                    <p class="nome">Felipe de Oliveira</p>
+                    <p>Desenvolvedor Front End</p>
+                    <div class="btns">
+                        <input type="button" value="RESUMÉ" class="btn-profile">
+                        <input type="button" value="LINKEDIN" class="btn-profile">
+                    </div>
                 </div>
-            </div>
-            <div class="nav-profile">
-                <p>Felipe de Oliveira</p>
-                <p>Desenvolvedor Front End</p>
             </div>
         </section>
 
