adicionando conteudo e estilizando o sobre mim

--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Felipe Oliveira</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/black.css">
+    <link rel="stylesheet" href="../css/profile.css">
     <link rel="stylesheet" href="../css/personalizaButton.css">
+    <link rel="stylesheet" href="../css/reset.css">
 </head>
 
 <body>
@@ -41,7 +42,6 @@
                         <ul>
                             <li><img src="../images/github (4).png" alt="" srcset=""></li>
                             <li><img src="../images/linkedin (1).png" alt="" srcset=""></li>
-
                         </ul>
                     </div>
                 </div>
