finalizando a section sobre

--- a/html/index.html
+++ b/html/index.html
@@ -25,10 +25,18 @@
                 </div>
                 <div class="info">
                     <ul>
-                        <li>Home</li>
-                        <li>Sobre mim</li>
-                        <li>Inscrição</li>
-                        <li>Contato</li>
+                        <li id="nav-list" class="nav-active">
+                            <a href="../html/index.html">Home</a>
+                        </li>
+                        <li id="nav-list" class="">
+                            <a href="../html/sobre.html">Sobre mim</a>
+                        </li>
+                        <li id="nav-list" class="">
+                            <a href="//">Inscrição</a>
+                        </li>
+                        <li id="nav-list" class="">
+                            <a href="../">Contato</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -62,5 +70,6 @@
 
 </body>
 <script src="../js/menu.js"></script>
+<script src="../js/navheader.js"></script>
 
 </html>
