--- a/html/sobre.html
+++ b/html/sobre.html
@@ -7,20 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/sobre.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Sobre mim</title>
 </head>
 
 <body>
     <main>
+        <header>
+            <div class="list-icon">
+                <div class="scroll">
+                    <p>Felipe Oliveira</p>
+                    <div class="nav">
+                        <img src="../images/icon-hamburger.svg" alt="" srcset="" class="menu">
+                    </div>
+                </div>
+                <div class="info">
+                    <ul>
+                        <li id="nav-list" class="">
+                            <a href="../html/index.html">Home</a>
+                        </li>
+                        <li id="nav-list" class="nav-active">
+                            <a href="../html/sobre.html"> Sobre mim</a>
+                        </li>
+                        <li id="nav-list" class="">
+                            <a href="//">Inscrição </a>
+                        </li>
+                        <li id="nav-list" class="">
+                            <a href="../"> Contato </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </header>
         <div class="container-sobre">
             <h1>SOBRE MIM</h1>
             <p>Meu nome é Felipe de Oliveira, sou um desenvolvedor Front End.</p>
             <p>Tenho 18 anos, sou de São Paulo, e apaixonado por desenvolvimento e tecnologia</p>
             <p>me encontrei na área do desenvolvimento web, faço curso técnico de programação de jogos digitais na ETEC</p>
             <p>um ambiente repleto de trabalho e projetos em grupo, como o TCC,</p>
-            <p>desde então, tenho desenvolvido minhas habilidades de trabalho em equipe e comunicação</p>
+            <p>desde então, tenho desenvolvido minhas habilidades de trabalho em equipe e comunicação.</p>
         </div>
     </main>
+    <script src="../js/menu.js"></script>
+    <script src="../js/navheader.js"></script>
 </body>
 
 </html>
