adicionando links para contato

--- a/html/index.html
+++ b/html/index.html
@@ -48,8 +48,12 @@
                     <img src="../images/profile.jpg" alt="" srcset="">
                     <div class="icon-profile">
                         <ul>
-                            <li><img src="../images/github (4).png" alt="" srcset=""></li>
-                            <li><img src="../images/linkedin (1).png" alt="" srcset=""></li>
+                            <li>
+                                <a href="https://github.com/Fleen66" target="_blank" rel="noopener noreferrer"><img src="../images/github (4).png" alt="" srcset=""></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/felipe-oliveira-a90352243/" target="_blank" rel="noopener noreferrer"><img src="../images/linkedin (1).png" alt="" srcset=""></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
