criando e estilizando a section contato e pagina de agredecimento

--- a/html/index.html
+++ b/html/index.html
@@ -32,10 +32,10 @@
                             <a href="../html/sobre.html">Sobre mim</a>
                         </li>
                         <li id="nav-list" class="">
-                            <a href="//">Inscrição</a>
+                            <a href="//">Projetos</a>
                         </li>
                         <li id="nav-list" class="">
-                            <a href="../">Contato</a>
+                            <a href="../html/contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -62,8 +62,8 @@
                     <p class="nome">Felipe de Oliveira</p>
                     <p>Desenvolvedor Front End</p>
                     <div class="btns">
-                        <input type="button" value="RESUMÉ" class="btn-profile">
-                        <input type="button" value="LINKEDIN" class="btn-profile">
+                        <a href="#" target="_blank" rel="noopener noreferrer"><input type="button" value="RESUMÉ" class="btn-profile"></a>
+                        <a href="https://www.linkedin.com/in/felipe-oliveira-a90352243/" target="_blank" rel="noopener noreferrer"><input type="button" value="LINKEDIN" class="btn-profile"></a>
                     </div>
                 </div>
             </div>
