--- a/html/sobre.html
+++ b/html/sobre.html
@@ -30,10 +30,10 @@
                             <a href="../html/sobre.html"> Sobre mim</a>
                         </li>
                         <li id="nav-list" class="">
-                            <a href="//">Inscrição </a>
+                            <a href="//">Projetos</a>
                         </li>
                         <li id="nav-list" class="">
-                            <a href="../"> Contato </a>
+                            <a href="../html/contato.html"> Contato </a>
                         </li>
                     </ul>
                 </div>
