consertando a pagina de agradecimento

--- a/html/contato.html
+++ b/html/contato.html
@@ -57,7 +57,7 @@
                     <textarea data-aos="fade-up" name="message" placeholder="Escreva sua mensagem" required="" id="mensagem"></textarea>
                 </div>
                 <input type="submit" value="Enviar" id="enviar">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/html/obrigado.html">
+                <input type="hidden" name="_next" value="https://fleen66.github.io/Portifolio-BlackandWhite/html/obrigado.html">
             </form>
         </div>
 
