adicionando conteudo na section projetos

--- a/html/contato.html
+++ b/html/contato.html
@@ -30,7 +30,7 @@
                             <a href="../html/sobre.html">Sobre mim</a>
                         </li>
                         <li id="nav-list" class="">
-                            <a href="//">Projetos</a>
+                            <a href="../html/projetos.html">Projetos</a>
                         </li>
                         <li id="nav-list" class="nav-active">
                             <a href="../html/contato.html">Contato</a>
