--- a/html/projetos.html
+++ b/html/projetos.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/sobre.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Sobre mim</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/projetos.css">
+    <title>Projetos</title>
 </head>
 
 <body>
@@ -26,30 +26,35 @@
                         <li id="nav-list" class="">
                             <a href="../html/index.html">Home</a>
                         </li>
-                        <li id="nav-list" class="nav-active">
-                            <a href="../html/sobre.html"> Sobre mim</a>
-                        </li>
                         <li id="nav-list" class="">
+                            <a href="../html/sobre.html">Sobre mim</a>
+                        </li>
+                        <li id="nav-list" class="nav-active">
                             <a href="../html/projetos.html">Projetos</a>
                         </li>
                         <li id="nav-list" class="">
-                            <a href="../html/contato.html"> Contato </a>
+                            <a href="../html/contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </header>
-        <div class="container-sobre">
-            <h1>SOBRE MIM</h1>
-            <p>Meu nome é Felipe de Oliveira, sou um desenvolvedor Front End.</p>
-            <p>Tenho 18 anos, sou de São Paulo, e apaixonado por desenvolvimento e tecnologia</p>
-            <p>me encontrei na área do desenvolvimento web, faço curso técnico de programação de jogos digitais na ETEC</p>
-            <p>um ambiente repleto de trabalho e projetos em grupo, como o TCC,</p>
-            <p>desde então, tenho desenvolvido minhas habilidades de trabalho em equipe e comunicação.</p>
-        </div>
+        <section class="projetos">
+            <div class="first-row">
+                <div class="project-box"></div>
+                <div class="project-box"></div>
+                <div class="project-box"></div>
+            </div>
+            <div class="second-row">
+                <div class="project-box"></div>
+                <div class="project-box"></div>
+                <div class="project-box"></div>
+            </div>
+        </section>
     </main>
-    <script src="../js/menu.js"></script>
-    <script src="../js/navheader.js"></script>
+
 </body>
+<script src="../js/navheader.js"></script>
+<script src="../js/menu.js"></script>
 
 </html>
