--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
                             <a href="../html/sobre.html">Sobre mim</a>
                         </li>
                         <li id="nav-list" class="">
-                            <a href="//">Projetos</a>
+                            <a href="../html/projetos.html">Projetos</a>
                         </li>
                         <li id="nav-list" class="">
                             <a href="../html/contato.html">Contato</a>
