adicionando responsividade na section projetos

--- a/html/projetos.html
+++ b/html/projetos.html
@@ -40,12 +40,12 @@
             </div>
         </header>
         <section class="projetos">
-            <div class="first-row">
+            <div class="container-projects">
+                <div class="project-box">
+                    <img src="../images/codigo.png" alt="">
+                </div>
                 <div class="project-box"></div>
                 <div class="project-box"></div>
-                <div class="project-box"></div>
-            </div>
-            <div class="second-row">
                 <div class="project-box"></div>
                 <div class="project-box"></div>
                 <div class="project-box"></div>
